# Fly-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.TXT  README.md  SDL_Net_Start.sln
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  Client_Routine.cpp  Client_main.cpp  Client_references.h  Game_Data.cpp  Game_Data.h  a.out  client
Debug/: Fly.exe - Ярлык.lnk  Game_Data.lib  Name_Generator.lib
Debug/images/: fly.xcf
Debug/onlyFly/: Fly.exe - Ярлык.lnk  connect.bat
Fly_server/: Fly_server.vcxproj  Fly_server.vcxproj.filters
Game_Data/: Game_Data.vcxproj  Game_Data.vcxproj.filters  ReadMe.txt
Name_Generator_lib/: NameGen_Main.cpp  Name_Generator_lib.vcxproj  Name_Generator_lib.vcxproj.filters  ReadMe.txt  nameGen.h
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  Server_ClientClass_definition.cpp  Server_References.h  Server_Render.cpp  Server_Routine.cpp  Server_Update.cpp  Server_main.cpp  Server_net.cpp  a.out
Show me image/: Animaiton.h  Animation.cpp  CMakeLists.txt  Draw.cpp  Fly.cpp  Fly.h  Render.cpp  Send_const.h  Show me image.vcxproj  Show me image.vcxproj.filters  Update.cpp  main.cpp  net_refers.h  net_routine.cpp  refers.h  routine.cpp
